--- a/chat-app-backend/package.json
+++ b/chat-app-backend/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "nodemon --exec tsx src/server.ts",
     "migrate": "npx prisma migrate dev",
+    "seed": "tsx prisma/seed.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
