--- a/chat-app-frontend/package.json
+++ b/chat-app-frontend/package.json
@@ -2,6 +2,7 @@
   "name": "chat-app-frontend",
   "version": "0.1.0",
   "private": true,
+  "browserslist": "> 1%",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -28,6 +29,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
