--- a/chat-app-frontend/package.json
+++ b/chat-app-frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
     "@tanstack/react-query": "^5.90.21",
+    "@tanstack/react-query-devtools": "^5.91.3",
     "axios": "^1.13.5",
     "clsx": "^2.1.1",
     "daisyui": "^5.5.18",
