- Update README.md for Frontend Setup.

--- a/chat-app-backend/.env.example
+++ b/chat-app-backend/.env.example
@@ -1,8 +1,8 @@
-DATABASE_URL="mysql://root:password@localhost:3306/kbz_chat_db"
+DATABASE_URL="mysql://root:password@localhost:3306/your_db_name"
 
 DATABASE_USER="root"
 DATABASE_PASSWORD="password"
-DATABASE_NAME="kbz_chat_db"
+DATABASE_NAME="your_db_name"
 DATABASE_HOST="localhost"
 DATABASE_PORT=3306
 
